--- a/css/style.css
+++ b/css/style.css
@@ -932,7 +932,7 @@ button a {
 .container form button {
     padding: 10px;
     background: #28a745;
-    color: #fff;
+    color: BLA;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -946,7 +946,7 @@ footer {
     text-align: center;
     padding: 20px 0;
     background: #333;
-    color: #fff;
+    color: black;
 }
 @media (max-width: 600px) {
     header nav ul {
